[gd_scene load_steps=2 format=3 uid="uid://brsjmhxuiikjh"]

[ext_resource type="Script" path="res://Scripts/model_list.gd" id="1_4sbir"]

[node name="ModelList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sbir")

[node name="ModelDataRequest" type="HTTPRequest" parent="."]

[node name="ModelSelectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 175.0
offset_bottom = 175.0

[node name="ImageRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="ModelDataRequest" to="." method="_on_model_data_request_request_completed"]
[connection signal="request_completed" from="ImageRequest" to="." method="_on_image_request_request_completed"]
